[tool.poetry]
name = "travisproj"
version = "0.1.11"
description = "This is a test project."
authors = ["BotPub <botpub@autopub.rocks>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}
pytest = "^5.0"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.7"
pytest-emoji = "^0.2.0"
pytest-sugar = "^0.9.2"

[tool.poetry.scripts]
say-hello = "travisproj.hello:hello"

[tool.autopub]
project-name = "TravisProj"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
version-strings = ["setup.py", "travisproj/__init__.py"]
pypi-url = "https://test.pypi.org/legacy/"
build-system = "setuptools"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
